fix(ContextMenuItem): hide all overflow, not only overflow-x

--- a/packages/axiom-components/src/Context/Context.css
+++ b/packages/axiom-components/src/Context/Context.css
@@ -149,7 +149,7 @@
 
 .ax-context-menu__item-content {
   flex: 1 1 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .ax-context-menu__item-checkbox {
